hphp/test/slow/password/invalid_password.php.expectf
HipHop Fatal error: Argument 1 passed to password_hash() must be an instance of string, array given in %s/test/slow/password/invalid_password.php on line 2
